--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .DS_Store
 test-report.*
 *.xcresult/
+gc_keys.json
+app_store_connect_creds.json
 
 #############################################################################
 # Below from: https://github.com/github/gitignore/blob/master/Swift.gitignore
