--- a/Apps/.gitignore
+++ b/Apps/.gitignore
@@ -1,6 +1,5 @@
-# because our Podfile is always using a local absolute path for the CIO SDK, 
-# ignore the lock file since every computer (and CI server) will have a different path. 
-# As long as we don't add non-CIO SDK dependencies to our sample apps, we don't 
-# need a lockfile. 
+# It's a good idea to include lock files in version control but because our Podfile 
+# is always using a local absolute path for the CIO SDK, ignore the lock file since 
+# every computer (and CI server) will have a different path. 
 Podfile.lock 
 Pods/
