--- a/Apps/CocoaPods-FCM/Podfile
+++ b/Apps/CocoaPods-FCM/Podfile
@@ -1,7 +1,7 @@
-# Uncomment the next line to define a global platform for your project
 platform :ios, '13.0'
 use_frameworks!
 
+# Always install the SDK from the local source code so the sample app tests this specific commit of the code. 
 sdk_local_path = File.join(File.dirname(__FILE__), '../../')
 
 target 'test cocoapods' do
