--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Build app via Fastlane 
       uses: maierj/fastlane-action@v3.0.0
       with:
-        lane: "build_app"
+        lane: "build"
         subdirectory: "Apps/${{ matrix.sample-app }}"
     
 
