--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -22,6 +22,8 @@ jobs:
         working-directory: "Apps/${{ matrix.sample-app }}" # changes directory into the sample app's directory. That's where we want our commands to run from.  
     steps:
     - uses: actions/checkout@v3
+      with: 
+        persist-credentials: false # fastlane needs to clone github repos. do not persist credentials or you will get permission errors when trying to clone. 
 
     - name: Set up XCode ${{ env.XCODE_VERSION_BUILD_APPS }}
       uses: maxim-lobanov/setup-xcode@v1
@@ -63,6 +65,6 @@ jobs:
         lane: "build"
         subdirectory: "Apps/${{ matrix.sample-app }}"
       env: 
-        GOOGLE_CLOUD_AUTH_FILE_CONTENTS_B64: ${{ secrets.GOOGLE_CLOUD_AUTH_FILE_CONTENTS_B64 }}
+        GOOGLE_CLOUD_MATCH_READONLY_SERVICE_ACCOUNT_B64: ${{ secrets.GOOGLE_CLOUD_MATCH_READONLY_SERVICE_ACCOUNT_B64 }}
     
 
