--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -1,6 +1,9 @@
 name: Build sample apps 
 
-on: [pull_request]
+on: 
+  pull_request:
+  push:
+    branches: [main]
 
 env:
   XCODE_VERSION_BUILD_APPS: 14
