--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -1,13 +1,9 @@
 name: Build sample apps 
 
 on: 
-  pull_request:
-  push:
-    branches: [main]
-
-env:
-  XCODE_VERSION_BUILD_APPS: 14
-  FASTLANE_XCODEBUILD_SETTINGS_RETRIES: 6 # fixes common problem when trying to compile iOS apps on GH actions runner. I think because GH action runners are slow? 
+  pull_request: # build sample apps for every commit pushed to an open pull request (including drafts)
+  release: # build sample apps for every git tag created. These are known as "stable" builds that are suitable for people outside the mobile team. 
+    types: [published]
 
 jobs:
   build-sample-apps:
@@ -26,10 +22,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up XCode ${{ env.XCODE_VERSION_BUILD_APPS }}
+    - name: Set up Xcode to version we determine 
       uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: ${{ env.XCODE_VERSION_BUILD_APPS }}
+        xcode-version: 14
     
     - name: Install tools from Gemfile (ruby language) used for building our apps with 
       uses: ruby/setup-ruby@v1
@@ -58,9 +54,9 @@ jobs:
       run: pod install 
 
     - name: Install tools for Fastlane build to use
-      run: brew install xcbeautify
+      run: brew install xcbeautify    
 
-    # - name: Dump GitHub Action metadata because Fastlane uses it. Viewing it here helps debug JSON parsing code in Firebase. 
+      # - name: Dump GitHub Action metadata because Fastlane uses it. Viewing it here helps debug JSON parsing code in Firebase. 
     #   run: cat $GITHUB_EVENT_PATH
 
     - name: Build app via Fastlane 
