--- a/Apps/CocoaPods-FCM/Podfile
+++ b/Apps/CocoaPods-FCM/Podfile
@@ -1,6 +1,4 @@
-minimum_ios_version = '13.0'
-
-platform :ios, minimum_ios_version
+platform :ios, '13.0'
 use_frameworks!
 
 # Always install the SDK from the local source code so the sample app tests this specific commit of the code. 
@@ -20,11 +18,3 @@ target 'Rich Push Notification Service Extension' do
   pod 'CustomerIOMessagingPush', :path => sdk_local_path
   pod 'CustomerIOMessagingPushFCM', :path => sdk_local_path
 end 
-
-post_install do |installer|
-  installer.pods_project.targets.each do |target|
-    target.build_configurations.each do |config|
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = minimum_ios_version
-    end
-  end
-end
