--- a/Apps/CocoaPods-FCM/src/test_cocoapods.entitlements
+++ b/Apps/CocoaPods-FCM/src/test_cocoapods.entitlements
@@ -4,6 +4,10 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:ciosample.page.link</string>
+	</array>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
