--- a/Apps/APN-UIKit/APN UIKit/APN UIKit/APN UIKit.entitlements
+++ b/Apps/APN-UIKit/APN UIKit/APN UIKit/APN UIKit.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:ciosample.page.link</string>
+		<string>applinks:ciosample.page.link/spm</string>
 	</array>
 </dict>
 </plist>
