--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -34,15 +34,18 @@ jobs:
         issue-number: ${{ github.event.pull_request.number }}
         body: |
           <!-- sample app builds --> 
-          # Sample app builds 
-          Sample apps are being built to be able to test the code in this pull request. 
-          Below you will find the list of the latest build numbers. It's recommended to always download the latest builds of the sample apps to accurately test the pull request. 
+          # Sample app builds 📱
+          
+          Below you will find the list of the latest versions of the sample apps. It's recommended to always download the latest builds of the sample apps to accurately test the pull request. 
+
           ---
           ${{ steps.build.outputs.build-log }}
         edit-mode: replace # replace the existing comment with new content since we are creating new builds 
 
   build-sample-apps:
     needs: [update-pr-comment] # wait for PR comment to be created saying new builds are being made. 
+    permissions:
+      pull-requests: write # comment on pull request with build information 
     strategy:
       matrix: # Use a matrix allowing us to build multiple apps in parallel. Just add an entry to the matrix and it will build! 
         sample-app: 
@@ -54,6 +57,11 @@ jobs:
     name: Building app...${{ matrix.sample-app }}
     steps:
     - uses: actions/checkout@v3
+
+    - name: Install tools used in workflow
+      run: |
+        brew install xcbeautify    
+        brew install sd
 
     - name: Set up Xcode to version we determine 
       uses: maxim-lobanov/setup-xcode@v1
@@ -86,9 +94,6 @@ jobs:
       run: pod install --repo-update
       working-directory: "Apps/${{ matrix.sample-app }}"
 
-    - name: Install tools for Fastlane build to use
-      run: brew install xcbeautify    
-
       # - name: Dump GitHub Action metadata because Fastlane uses it. Viewing it here helps debug JSON parsing code in Firebase. 
     #   run: cat $GITHUB_EVENT_PATH
 
@@ -107,9 +112,9 @@ jobs:
       with:
         comment-id: ${{ needs.update-pr-comment.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
-        # the variables $APP_BUILD_NUMBER, $APP_VERSION_STRING are created when fastlane runs "build". 
+        # the variables APP_BUILD_NUMBER, APP_VERSION_STRING are created when fastlane runs "build". 
         body: |
-          * ${{ matrix.sample-app }}: `$APP_VERSION_STRING ($APP_BUILD_NUMBER)`
+          * ${{ matrix.sample-app }}: `${{ env.APP_VERSION_STRING }} (${{ env.APP_BUILD_NUMBER }})`
         edit-mode: append
 
     - name: Update sample builds PR comment with build failure message 
