updated workflow to run multiple apps

--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -13,6 +13,7 @@ jobs:
         # List all sample apps you want to have compiled. 
         # List item is name of directory inside of "Apps" directory for the corresponding app to compile. 
         - "CocoaPods-FCM"
+        - "APN-UIKit/APN UIKit"
 
     runs-on: macos-12
     name: Building app...${{ matrix.sample-app }}
